--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -593,6 +593,10 @@ section {
   text-decoration: none;
 }
 
+.bg-purple {
+  background-color: #33364a!important;
+}
+
 /*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
