--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -992,7 +992,7 @@ section {
   padding: 30px 30px 0 30px;
   margin: 30px 15px;
   text-align: center;
-  min-height: 250px;
+  min-height: 250px!important;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
 }
 
